--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'application'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -10,7 +9,7 @@ repositories {
 }
 
 application {
-    mainClass = 'Main'
+    mainClassName = "Main"
 }
 
 test {
