--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,16 +10,19 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [8, 14]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+          java-version: ${{ matrix.java }}
     - name: Cache Gradle packages
       uses: actions/cache@v2
       with:
