--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 application {
-    mainClassName = "Main"
+    mainClassName = "com.polyTweet.view.MainView"
 }
 
 test {
@@ -32,5 +32,3 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.7.0'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.0'
 }
-
-mainClassName = 'com.polyTweet.view.ProfileView'
